2008-07-12  Richard Dale  <richard.j.dale@gmail.com>

	* Change the slot/signal argument parsing code to work the same way as in
	  QtRuby. Use a QList<MocArgument*> type instead of just an array of
	  'MocArgument *'.
	* The type of a slot arg should always be in the smoke module of the slot
	  being invoked. However, that isn't true for a dataUpdated() slot in a 
      PlasmaScripting.Applet. So make GetMocArguments search through all the
	  loaded smoke modules if the arg type isn't found at first.

2008-07-11  Arno Rehn  <arno@arnorehn.de>

    * Use IntPtrFromQString instead of StringFromQString.
    * Export the rest of the C# marshalling functions.

2008-07-09  Richard Dale  <richard.j.dale@gmail.com>

	* When looking up the smoke type of a slot or signal argument, iterate 
	  through all the loaded smoke modules, rather than just looking in the
	  qt one.

2008-07-08  Richard Dale  <richard.j.dale@gmail.com>

	* Add marshallers for QHash types such as QHash<QString, QVariant> based
	  on the QMap marshalling code.

2008-07-07  Arno Rehn  <arno@arnorehn.de>

	* Allow to call InitRuntime() multiple times to make sure every binding
	  is initialized.

2008-07-06  Richard Dale  <richard.j.dale@gmail.com>

	* Where multiple inheritance was catered for in the Qyoto bindings each
	  superclass class other than the 'main' one was supposed to be an
	  interface type in method calls rather than the real type of the class.
	  For instance, QGraphicsWidget inherits from QObject, QGraphicsItem and
	  QGraphicsLayoutItem, and the last two classes have interfaces 
	  IQGraphicsItem IQGraphicsLayoutItem respectively The two classes were
	  correctly implementing the interfaces, but the types in the method calls
	  were not using these interface types. So fix that.
	* In the generated code, tabs are now replaced with 4 spaces.

2008-07-01  Arno Rehn  <arno@arnorehn.de>

	* Moved the runtime initialization from the static SmokeInvocation