@@ -13,6 +13,8 @@
  *                                                                         *
  ***************************************************************************/
 
+#include <QtDBus>
+
 #include "slotreturnvalue.h"
 #include "qyoto.h"
 
@@ -23,15 +25,22 @@ SlotReturnValue::SlotReturnValue(void ** o, Smoke::StackItem * result, QList<Moc
 	_stack = new Smoke::StackItem[1]; 
 	Marshall::HandlerFn fn = getMarshallFn(type());
 	(*fn)(this);
-	// Save any address in zeroth element of the arrary of 'void*'s passed to 
-	// qt_metacall()
-	void * ptr = o[0];
-	smokeStackToQtStack(_stack, o, 0, 1, _replyType);
-
-	// Only if the zeroth element of the arrary of 'void*'s passed to qt_metacall()
-	// contains an address, is the return value of the slot needed.
-	if (ptr != 0) {
-		*(void**)ptr = *(void**)(o[0]);
+	
+	QByteArray t(type().name());
+	t.replace("const ", "");
+	t.replace("&", "");
+	if (t == "QDBusVariant") {
+		*reinterpret_cast<QDBusVariant*>(o[0]) = *(QDBusVariant*) _stack[0].s_class;
+	} else {
+		// Save any address in zeroth element of the arrary of 'void*'s passed to 
+		// qt_metacall()
+		void * ptr = o[0];
+		smokeStackToQtStack(_stack, o, 0, 1, _replyType);
+		// Only if the zeroth element of the array of 'void*'s passed to qt_metacall()
+		// contains an address, is the return value of the slot needed.
+		if (ptr != 0) {
+			*(void**)ptr = *(void**)(o[0]);
+		}
 	}
 }
 
